@@ -1,3 +1,12 @@
+2007-04-15  Kevin B. Kenny  <kennykb@acm.org>
+
+	* generic/tclCompCmds.c: added a cast to silence a compiler
+	error on VC2005.
+	* library/clock.tcl: Restored unique-prefix matching of keywords
+	on the [clock] command. [Bug 1690041]
+	* tests/clock.test: Added rudimentary test cases for unique-prefix
+	matching of keywords.
+	
 2007-04-14  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclExecute.c: removed some code at INSTEXPAND_SKTOP that
